--- a/buildScripts/ivy.xml
+++ b/buildScripts/ivy.xml
@@ -49,7 +49,8 @@
 		<dependency org="commons-logging" name="commons-logging" rev="1.2" conf="test->default; sources" />
 		<dependency org="org.slf4j" name="slf4j-api" rev="1.8.0-beta2" conf="test->default; sources" />
 		<dependency org="org.slf4j" name="slf4j-ext" rev="1.8.0-beta2" conf="test->default; sources" />
-		<dependency org="org.jboss.logging" name="jboss-logging" rev="3.3.0.Final" conf="test->default; sources" />
+        <dependency org="org.jboss.logging" name="jboss-logging" rev="3.3.0.Final" conf="test->default; sources" />
+        <dependency org="com.tmax.jeus" name="jeus-logger" rev="21.0.0.0-SNAPSHOT" conf="test->default; sources" />
 		<dependency org="com.google.flogger" name="flogger" rev="0.2" conf="test->default; sources" />
 		<dependency org="com.google.guava" name="guava" rev="18.0" conf="test->default; sources" />
 		<dependency org="com.google.code.findbugs" name="findbugs" rev="3.0.1" conf="test->master" />
